@@ -8,7 +8,7 @@ Here is how to go about releasing a new version of `netaddr`.
 
 * Run the tests under Python 2.7.x and Python 3.4.x at a minimum, like so
 
-    `python netaddr/tests/__init__.py`
+    `python setup.py test`
 
 * Update the CHANGELOG with details of all changes since the last release.
   Ensure that all references to various tickets and merge requests are included.
