@@ -1,18 +1,24 @@
 ---------------
 Release: 0.7.15
 ---------------
-Date: ?????????
+Date: ??? Jun 2015
 
 ^^^^^^^^^^^^^^^^^^^^
 Changes since 0.7.14
 ^^^^^^^^^^^^^^^^^^^^
 
 * Fix slowness in IPSet.__contains__. Thanks to novas0x2a for noticing.
+
 * Normalize IPNetworks when they are added to an IPSet
+
+* Converted test suite to py.test
 
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Specific bug fixes addressed in this release
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+FIXED Issue 98: https://github.com/drkjam/netaddr/issues/98
+    - Convert test suite to py.test
 
 FIXED Issue 94: https://github.com/drkjam/netaddr/issues/94
     - IPSet.__contains__ is about 40 times slower than the equivalent IPRange
